<resources>
    <string name="app_name">简读RSS</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="time_today">今天</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_monment_ago">刚刚</string>
    <string name="time_night">晚上</string>
    <string name="time_midnight">凌晨</string>
    <string name="time_morning">上午</string>
    <string name="time_afternoon">下午</string>
    <string name="time_monment_ago_by_minute">%d分钟之前</string>
    <string name="time_before_yesterday">前天</string>
    <string name="time_bbefore_yesterday">三天前</string>
    <string name="time_more_before">更久</string>
    <string name="tip_no_login">登录后可以一键同步订阅源</string>
    <string name="title_reflash">刷新</string>
    <string name="title_sub">添加订阅</string>
    <string name="dialog_sub_title">输入RSS Url</string>
    <string name="dialog_sub_hint">输入url</string>
    <string name="dialog_sub_search">搜索</string>
    <string name="dialog_sub_action">订阅</string>
    <string name="dialog_sub_search_load">{fa-spinner spin}</string>
    <string name="dialog_sub_other_method">不知道添加什么?来看看推荐</string>
    <string name="dialog_sub_search_error">无法获取当前url的订阅源.</string>
    <string name="dialog_sub_search_exist">您已经订阅过这个url源啦.</string>
    <string name="dialog_sub_search_empty">请输入url.</string>
    <string name="dialog_subing_title">频道确认</string>
    <string name="dialog_sub_success">订阅成功!</string>
    <string name="dialog_sub_cancel">取消</string>
    <string name="sub_notice_empty_data">当前没有请求到数据,请点击屏幕重试.</string>
    <string name="sub_notice_loading">数据加载中...</string>
    <string name="sub_notice_system_error">服务器繁忙,请点击屏幕重试..</string>
    <string name="sub_btn_sub">订阅</string>
    <string name="sub_btn_cancel_sub">取订</string>
    <string name="sub_notice_already_join">订阅 " %1$s " 成功</string>
    <string name="sub_notice_already_exist">您已经订阅过</string>
    <string name="sub_search_hint">喜欢的标题,网址,关键字</string>
    <string name="title_activity_feed">频道</string>
    <string name="title_activity_article">文章</string>
    <string name="title_activity_setting">设置</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_cf">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_find_psw">忘记密码了?</string>
    <string name="action_new_user">新用户注册</string>
    <string name="go_sign_in">登录后可以保存文章</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号格式不合法.</string>
    <string name="error_invalid_password">请输入4个以上的字符</string>
    <string name="error_incorrect_password">您的账号或密码不正确.</string>
    <string name="error_field_required">请输入账号</string>
    <string name="login_success">登录成功!</string>
    <string name="register_title">注册账号</string>
    <string name="register_action">注册</string>
    <string name="error_invalid_password_req">两次输入的密码不一致.</string>
    <string name="register_success">注册成功!</string>
    <string name="register_success_info">前往登录</string>
    <string name="register_account_already_exist">"当前账号已经被注册!"</string>
    <string name="system_error">服务器暂时有点忙,请稍后再试试哦!</string>
    <string name="title_activity_image_browser">图片</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="detail_info">%1$s _ %2$s</string>
    <string name="title_activity_article_web">原文</string>
    <string name="title_activity_article_web_link_title">(链接)%1$s</string>
    <string name="action_read">标记已读</string>
    <string name="action_favor">收藏</string>
    <string name="action_favor_back">取消收藏</string>
    <string name="action_delete">删除</string>
    <string name="action_read_all">全部标记已读</string>
    <string name="action_read_reflash">刷新</string>
    <string name="action_read_top">置顶</string>
    <string name="action_read_delete_feed">删除订阅</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="notice_update">%1$s有%2$d条更新</string>
    <string name="notice_update_none">暂时没有更新,请稍后再试试..</string>
    <string name="notice_read_all">全部已读.</string>
    <string name="title_activity_add_feed">添加订阅</string>
    <string-array name="add_feed">
        <item>搜索</item>
        <item>系统推荐</item>
    </string-array>
    <string name="add_feed_btn">自定义添加,输入URL</string>
    <string name="hello_blank_fragment">暂时不支持该功能</string>
    <string name="title_activity_welcome">欢迎您!</string>
    <string name="welcome_word">欢迎回来</string>
    <string name="welcome_smile">: )</string>
    <string name="welcome_app_info"><Date><![CDATA[%1$s<br />Ver : %2$s]]></Date></string>
    <string name="dummy_button">进入主页</string>
    <string name="dummy_content">@string/app_name</string>
    <string name="request_error">当前网络出了小差\n请稍后再试试哦~</string>
    <string name="share_title">分享到</string>
    <string name="share_not_install">请先安装相应客户端</string>
    <string name="share_content">我在#%3$s#上发现一篇好文\r\n\r\n%1$s\r\n原文链接:%2$s\r\n\r\n我在用#%3$s#,快来下载!%4$s</string>
    <string name="share_content_title">[%1$s]%2$s</string>
    <string name="share_cancel">取消</string>
    <string name="share_fail">分享失败</string>
    <string name="set_title">阅读设置</string>
    <string name="set_mode">夜间模式</string>
    <string name="set_font">字体大小</string>
    <string name="set_light">亮度调节</string>
    <string name="set_commit">完成</string>
    <string name="set_theme_picker_title">选择主题</string>
    <string name="set_theme_picker_close">关闭</string>
    <string name="set_feed_title">频道设置</string>
    <string name="set_feed_show_all_article">只显示未读文章</string>
    <string name="emptyview_reload">{fa-refresh} 重新加载</string>
    <string name="emptyview_default_notice">空空如也</string>
    <string name="emptyview_fuc_title">想要做点什么?</string>
    <string name="emptyview_fuc_add_feed">{fa-plus-square-o} 添加频道</string>
    <string name="emptyview_fuc_login">{fa-user} 去登录</string>
    <string name="feed_item_load">{fa-spinner spin}</string>
    <string name="feed_item_delete_title">确定删除 "%1$s" 吗?</string>
    <string name="feed_item_delete_cancel">取消</string>
    <string name="feed_item_delete_commit">确定</string>
    <string name="feed_item_delete_success">删除成功!</string>
    <string name="font_favor"><Data><![CDATA[<font color="#FF5500">#已收藏#</font>  ]]></Data></string>
    <string name="font_delete"><Data><![CDATA[<font color="#0e508e">#已删除#</font>  ]]></Data></string>
    <string name="article_view_orignal_web">查看原文</string>
    <string name="article_web_view_error_url">网页请求错误</string>
    <string name="title_activity_view_artilce">查看文章</string>
    <string name="view_artilce_title_favor">收藏的文章</string>
    <string name="view_artilce_title_history">阅读历史记录</string>
    <string name="view_artilce_title_unread">全部未读</string>
    <string name="font_feed_title"><Data><![CDATA[来自<font color="#0e508e"> %1$s </font>  ]]></Data></string>
    <string name="font_feed_last_read_time"><Data><![CDATA[来自<font color="#0e508e"> %1$s | 已阅 %2$s 次</font>  ]]></Data></string>
    <string name="font_feed_last_read_time_no_feed"><Data><![CDATA[<font color="#0e508e">已阅 %1$s 次</font>  ]]></Data></string>
    <string name="action_conform">确定</string>
    <string name="action_cancel">取消</string>
    <string name="empty_feed">抱歉,当前频道不存在.</string>
    <string name="empty_article">抱歉,当前文章不存在.</string>
    <string name="set_read_title">阅读设置</string>
    <string name="set_auto_scroll_unread_key">set_auto_scroll_unread_key</string>
    <string name="set_auto_scroll_unread_title">自动跳转到未读文章</string>
    <string name="set_auto_scroll_unread_summary">进入频道后自动滚动到第一个未读文章</string>
    <string name="set_auto_show_unread_key">set_auto_scroll_show_unread_key</string>
    <string name="set_auto_show_unread_title">只显示未读文章</string>
    <string name="set_open_source_key">set_auto_scroll_unread_key</string>
    <string name="set_open_source_title">智能打开原文</string>
    <string name="set_open_source_summary">当文章内容过少,排版过乱时直接打开原文</string>
    <string name="set_open_in_browser_key">set_open_in_browser_key</string>
    <string name="set_open_in_browser_title">使用内置浏览器打开链接</string>
    <string name="set_system">系统设置</string>
    <string name="set_no_graph_model_key">set_no_graph_model_key</string>
    <string name="set_no_graph_model_title">无图模式</string>
    <string name="set_loading_pic_under_WIIF_key">set_loading_pic_under_WIIF_key</string>
    <string name="set_loading_pic_under_WIIF_title">WIFI下自动加载图片</string>
    <string name="set_push_message_key">set_push_message_key</string>
    <string name="set_push_message_title">消息推送</string>
    <string name="set_update_version_key">set_update_version_key</string>
    <string name="set_update_version_title">版本更新</string>
    <string name="set_update_version_summary_loading">检测中...</string>
    <string name="set_update_version_title_loading">正在连接服务器...</string>
    <string name="set_update_version_summary">当前版本 : %1$s</string>
    <string name="set_clean_cache_key">set_clear_cache_key</string>
    <string name="set_clean_cache_title">清空已读文章</string>
    <string name="set_clean_cache_summary">阅读历史:%1$s 篇(不包含收藏文章)</string>
    <string name="set_clean_cache_summary_load">计算中...</string>
    <string name="set_clean_cache_summary_down">清空完毕</string>
    <string name="set_other">其他</string>
    <string name="set_about_author_key">set_about_author_key</string>
    <string name="set_about_author_title">关于作者</string>
    <string name="about_me_name">Moon</string>
    <string name="about_me_info">软件大四在读程序猿,初入安卓坑.求大神带飞.欢迎交流学习.</string>
    <string name="about_me_link"><Data><![CDATA[<p>
    QQ:<span style="color:#0e508e">237253995</span>
</p>
<p>
    Email:<span style="color:#0e508e">moon4chen@163.com</span>
</p>
<p>
    Github:<span style="color:#0e508e"><a href="https://github.com/moonChenHaohui">https://github.com/moonChenHaohui</a></span>
 &nbsp; &nbsp;
</p>]]></Data></string>
    <string name="option_sync_storge_now">现在同步</string>
    <string name="option_sync_storge_doing">正在同步..</string>
    <string name="option_sync_storge_after_login">登录后可以同步</string>
    <string name="option_sync_storge_last_time">同步成功!</string>
    <string name="option_sync_storge_fial">同步失败,点击重试</string>
    <string name="option_delete_all_read_articles">@string/set_clean_cache_title</string>
    <string name="option_delete_all_read_articles_doing">正在删除..</string>
    <string name="option_read_all">一键全部已读</string>
    <string name="option_read_all_none">当前没有文章未读</string>
    <string name="option_read_all_down">已全部已读,共计 %1$s 篇</string>
    <string name="option_read_all_go_on">共计删除 %1$s 篇,请点击继续</string>
    <string name="user_title">用户信息</string>
    <string name="user_quit_user">退出用户</string>
    <string name="user_quit_user_check">真的要退出吗?</string>
    <string name="user_quit_user_notice">退出后清空用户的频道 收藏文章数据.</string>
    <string name="user_exit">关闭</string>
    <string name="user_name">用户:%1$s</string>
    <string name="user_register_time">注册时间:%1$s</string>
    <string name="user_info">储存: 1 频道 | 共 2 篇收藏文章</string>
    <string name="user_check_fail">用户:%1$s</string>
    <string name="user_validate_fail">用户信息已经过期,请重新登录.</string>
    <string name="allunread">全部未读</string>
    <string name="myfavor">我的收藏</string>
    <string name="readhistory">最近阅读</string>
    <string-array name="functions">
        <item>添加订阅</item>
        <item>@string/allunread</item>
        <item>@string/myfavor</item>
        <item>@string/readhistory</item>
        <item>设置</item>
        <item>主题</item>
    </string-array>
    <string-array name="functions_icon">
        <item>{fa-plus-square}</item>
        <item>{fa-eye}</item>
        <item>{fa-star}</item>
        <item>{fa-history}</item>
        <item>{fa-cogs}</item>
        <item>{fa-certificate}</item>
    </string-array>
    <string name="drawer_sync_icon">{fa-refresh}</string>
    <string name="drawer_sync_get_start">马上同步</string>
    <string name="drawer_sync_in_download_fail">数据异常</string>
</resources>