<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/set_read_title">
        <CheckBoxPreference
            android:key="@string/set_auto_scroll_unread_key"
            android:title="@string/set_auto_scroll_unread_title"
            android:summary="@string/set_auto_scroll_unread_summary"/>
        <CheckBoxPreference
            android:key="@string/set_auto_show_unread_key"
            android:title="@string/set_auto_show_unread_title"
            />
        <CheckBoxPreference
            android:key="@string/set_open_source_key"
            android:title="@string/set_open_source_title"
            android:summary="@string/set_open_source_summary"
            />
        <CheckBoxPreference
            android:key="@string/set_open_in_browser_key"
            android:title="@string/set_open_in_browser_title"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/set_system">
        <CheckBoxPreference
            android:key="@string/set_no_graph_model_key"
            android:title="@string/set_no_graph_model_title"/>
        <CheckBoxPreference
            android:key="@string/set_loading_pic_under_WIIF_key"
            android:dependency="@string/set_no_graph_model_key"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/set_loading_pic_under_WIIF_title" />
        <CheckBoxPreference
            android:key="@string/set_push_message_key"
            android:title="@string/set_push_message_title"/>
        <Preference android:key="@string/set_clear_cache_key"
            android:title="@string/set_clear_cache_title"
            android:summary="@string/set_clear_cache_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/set_other">
        <Preference android:key="@string/set_about_author_key"
            android:title="@string/set_about_author_title"/>
    </PreferenceCategory>

</PreferenceScreen>  