
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="20dp"
    android:width="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_read_all"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="collapseActionView"
        android:title="@string/action_read_all"/>
    <item
        android:id="@+id/action_read_reflash"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="collapseActionView"
        android:title="@string/action_read_reflash"/>
    <item
        android:id="@+id/action_read_top"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="collapseActionView"
        android:title="@string/action_read_top"/>
    <item
        android:id="@+id/action_read_delete_feed"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="collapseActionView"
        android:title="@string/action_read_delete_feed" />

</menu>
