<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/edit_corners"
    android:layout_margin="@dimen/normal_padding"
    android:padding="@dimen/normal_padding"
    android:gravity="center">
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <EditText android:id="@+id/account" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_account"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <EditText android:id="@+id/password_req" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password_cf"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <com.rey.material.widget.Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_action"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/text_h2"
        android:background="@drawable/button_corners"
        app:rd_enable="true"/>
</LinearLayout>