<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <LinearLayout
        android:id="@+id/share_content"
        android:elevation="4dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_gray"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_list_item_small"
            android:text="@string/set_feed_title"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold"/>
        <include layout="@layout/common_divider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_list_item_small"
            style="@style/normalLine">
            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_feed_show_all_article"
                android:layout_alignParentLeft="true"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/text_h2"
                android:layout_centerVertical="true"
                android:id="@+id/view1" />

            <com.rey.material.widget.Switch
                android:id="@+id/read_switch"
                style="@style/Material.Widget.Switch"
                android:paddingLeft="@dimen/normal_padding"
                android:paddingRight="@dimen/normal_padding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:checked="false"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <com.rey.material.widget.Button
            android:background="@drawable/selectable_background"
            android:id="@+id/commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_list_item_small"
            android:text="@string/set_commit"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/text_h3"
            android:layout_gravity="center"
            app:rd_enable="true"/>
    </LinearLayout>
</layout>