<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="title"
            type="String" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_padding"
            android:layout_marginRight="@dimen/normal_padding"
            android:background="@drawable/edit_corners"
            android:gravity="center"
            android:orientation="vertical">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="top"
                android:hint="@string/dialog_sub_hint"
                android:maxLines="2"
                android:minLines="2"
                android:textSize="@dimen/text_h2" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_gravity="right"
                android:id="@+id/login"
                android:padding="@dimen/normal_half_padding"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_sub_search"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_h2"
                app:rd_enable="true" />
            <com.joanzapata.iconify.widget.IconTextView
                android:padding="@dimen/normal_half_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sub_other_method"
                android:textColor="@color/txt_active"
                android:layout_gravity="right"
                android:textSize="@dimen/text_h3"
                android:textStyle="italic|bold"/>
        </LinearLayout>
        <com.rey.material.widget.ProgressView
            android:id="@+id/progress"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:pv_autostart="true"
            app:pv_circular="true"
            app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
            app:pv_progressMode="indeterminate"/>
    </FrameLayout>
</layout>